# docs/swagger.yaml
@@ -284,11 +284,11 @@ paths:
     post:
       consumes:
       - application/json
-      description: Create a new task with the input payload
+      description: Create a new payment with the input payload
       parameters:
       - description: Task Request
         in: body
-        name: task
+        name: payment
         required: true
         schema:
           $ref: '#/definitions/task.Request'
@@ -307,12 +307,12 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/response.Response'
-      summary: Create a new task
+      summary: Create a new payment
       tags:
       - tasks
   /tasks/{id}:
     delete:
-      description: Delete a task by its ID
+      description: Delete a payment by its ID
       parameters:
       - description: Task ID
         in: path
@@ -334,11 +334,11 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/response.Response'
-      summary: Delete a task by ID
+      summary: Delete a payment by ID
       tags:
       - tasks
     get:
-      description: Get details of a task by its ID
+      description: Get details of a payment by its ID
       parameters:
       - description: Task ID
         in: path
@@ -360,13 +360,13 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/response.Response'
-      summary: Get a task by ID
+      summary: Get a payment by ID
       tags:
       - tasks
     put:
       consumes:
       - application/json
-      description: Update details of a task by its ID
+      description: Update details of a payment by its ID
       parameters:
       - description: Task ID
         in: path
@@ -375,7 +375,7 @@ paths:
         type: string
       - description: Task Request
         in: body
-        name: task
+        name: payment
         required: true
         schema:
           $ref: '#/definitions/task.Request'
@@ -398,7 +398,7 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/response.Response'
-      summary: Update a task by ID
+      summary: Update a payment by ID
       tags:
       - tasks
   /tasks/search:
