# internal/domain/task/dto.go
@@ -7,7 +7,7 @@ import (
 )
 
 var (
-	ErrorNotFound        = errors.New("task not found")
+	ErrorNotFound        = errors.New("payment not found")
 	ErrorInvalidTitle    = errors.New("invalid title")
 	ErrorInvalidDate     = errors.New("invalid date format")
 	ErrorInvalidUserID   = errors.New("invalid user ID")
